# Opportunity-Analyzer

./: .gitignore  README.md  analyze-summary.py  analyzer.py  findings_with_suggestions.csv  generated_well_architected_findings all.csv  generated_well_architected_findings.csv  ollama_suggestion_cache.json  summary.csv
.devcontainer/: Dockerfile  LICENSE.md  Readme.md  devcontainer.json  pyproject.toml
backup_input/: Customer_Name_(1293842)_DAY2_Well_Architected_Review___Findings_Report___Payless_Scan_Non_Prod_June_2024_08_Jul_24_16_00_14.csv  generated_well_architected_findings.csv  generated_well_architected_findings_old.csv
input/: Customer_Name_(1293842)_DAY2_Well_Architected_Review___Findings_Report___Payless_Scan_Non_Prod_June_2024_08_Jul_24_16_00_14.csv
output/: findings_with_suggestions_0bb05f51-02f3-4ae8-9f55-aec834616b90.csv  findings_with_suggestions_2cd94c8a-bbf3-4876-aae8-113b4d097044.csv  findings_with_suggestions_311d962b-0631-4202-8e80-ac1b6e18f815.csv  findings_with_suggestions_31dad3f6-d6d2-485b-8091-7f4ced751e2d.csv  findings_with_suggestions_446d8b9c-74e5-47e4-ae8c-1466d44d7754.csv  findings_with_suggestions_5110205e-25a9-44d5-9f34-45cdc3a06006.csv  findings_with_suggestions_5eb90a1c-cbab-4192-848d-2944a071abf0.csv  findings_with_suggestions_b517d7d1-8c02-4dbe-b10b-9d16dd7de342.csv  findings_with_suggestions_bc98000f-f29c-419c-b482-2bd103238f6c.csv  findings_with_suggestions_fd6838b4-c0c9-45e4-8815-ce1995120e41.csv  generated_well_architected_findings_20241002_015417.csv  generated_well_architected_findings_20241002_020603.csv  (+8 more)
(+4 files in other folders)
